grid align fix

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -130,7 +130,7 @@ p {
     &:hover {
       background: #1f1f1f;
       color: #5f5f5f;
-      transition: .2s ease-in;
+      transition: .2s ease-in .2s;
       cursor: pointer;
     }
   }
@@ -144,7 +144,7 @@ p {
     }
     &:hover {
       color: #5f5f5f;
-      transition: .2s ease-in;
+      transition: .2s ease-in .2s;
       cursor: pointer;
     }
   }
@@ -177,7 +177,7 @@ p {
     &:hover {
       background: #1f1f1f;
       color: #5f5f5f;
-      transition: .2s ease-in;
+      transition: .2s ease-in .2s;
       cursor: pointer;
       svg {
         path {
@@ -210,7 +210,7 @@ p {
     &:hover {
       color: #5f5f5f;
       border-color: #5f5f5f;
-      transition: .2s ease-in;
+      transition: .2s ease-in .2s;
       cursor: pointer;
     }
     &.active {
